--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
   <button mat-button>Students</button>
   <button mat-button>Courses</button>
   <span class="example-spacer"></span>
-  <button mat-button>Login</button>
-  <button mat-button>Register</button>
+  <button mat-button routerLink="/login">Login</button>
+  <button mat-button routerLink="/register">Register</button>
 </mat-toolbar>
+<router-outlet></router-outlet>
