--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button> -->
-  <button mat-icon-button><mat-icon aria-hidden="false" aria-label="home icon">home</mat-icon></button>
-  <button mat-button>Dashboard</button>
-  <button mat-button>Students</button>
-  <button mat-button>Courses</button>
-  <span class="example-spacer"></span>
+  <button mat-icon-button routerLink="/home"><mat-icon aria-hidden="false" aria-label="home icon">home</mat-icon></button>
+  <button mat-button routerLink="/home">Dashboard</button>
+  <button mat-button routerLink="/students">Students</button>
+  <button mat-button routerLink="/courses">Courses</button>
+  <span class="spacer"></span>
   <button mat-button routerLink="/login">Login</button>
   <button mat-button routerLink="/register">Register</button>
 </mat-toolbar>
