--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,6 +1,6 @@
 <mat-list style="margin: 2rem;">
     <h3 class="mat-display-1">Course List</h3>
-    <mat-list-item *ngFor="let course of courses" style="border: 1px solid grey;cursor: pointer">
+    <mat-list-item *ngFor="let course of courses" style="border: 1px solid grey;cursor: pointer" [routerLink]="['detail',course.id]">
         <h4 matLine>{{course.course_name}}</h4>
         <p matLine> {{course.university}} </p>
         <span class="spacer"></span>
