--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,4 @@
-<p>dashboard works!</p>
+<h1 style="margin: 2rem"><span>Welcome, please </span>
+    <span *ngIf="!authService.isLoggedIn">login</span>
+     <span *ngIf="authService.isLoggedIn">navigate</span>
+</h1>
