--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
   <button mat-button routerLink="/students">Students</button>
   <button mat-button routerLink="/courses">Courses</button>
   <span class="spacer"></span>
-  <button mat-button routerLink="/login">Login</button>
+  <button mat-button routerLink="/login"  *ngIf="!authService.isLoggedIn">Login</button>
+  <button mat-button (click)="authService.logout()" *ngIf="authService.isLoggedIn">Logout</button>
   <button mat-button routerLink="/register">Register</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
