--- a/src/app/courses/course-detail/course-detail.component.html
+++ b/src/app/courses/course-detail/course-detail.component.html
@@ -1,4 +1,4 @@
-<mat-list style="margin: 2rem;">
+<mat-list style="margin: 2rem;" *ngIf="course">
     <h3 class="mat-display-1">Course Detail</h3>
     <mat-list-item>
         <h4 matLine>Course Name: {{course.course_name}}</h4>
