--- a/src/app/students/student-list/student-list.component.html
+++ b/src/app/students/student-list/student-list.component.html
@@ -5,10 +5,9 @@
         <p matLine> {{student.gender}} </p>
         <p matLine> {{student.email}} </p>
         <span class="spacer"></span>
-        <!-- <div style="position: relative; z-index: 1000">
-            <button mat-button routerLink="['detail', student.id, 'edit']">Edit</button>
-            <button mat-button>Delete</button>
-        </div> -->
+            <button mat-button [routerLink]="['detail', student.id, 'edit']">Edit</button>
+            <button mat-button (click)="delete(student)">Delete</button>
+
         
     </mat-list-item>
 </mat-list>
