--- a/src/app/students/student-create/student-create.component.html
+++ b/src/app/students/student-create/student-create.component.html
@@ -1,1 +1,27 @@
-<p>student-create works!</p>
+<mat-card>
+    <mat-card-title>Edit Course</mat-card-title>
+<mat-card-content>
+<form (ngSubmit)="submit()">
+  <p>
+    <mat-form-field>
+      <input type="text" matInput placeholder="Course Name" name="first_name" [(ngModel)]="newStudent.first_name">
+    </mat-form-field>
+  </p>
+
+  <p>
+    <mat-form-field>
+      <input type="text" matInput placeholder="University" name="last_name" [(ngModel)]="newStudent.last_name">
+    </mat-form-field>
+  </p>
+
+  <p *ngIf="error" class="error">
+    {{ error }}
+  </p>
+
+  <div class="button">
+    <button type="submit" mat-button>Save</button>
+  </div>
+
+</form>
+</mat-card-content>
+</mat-card>
