--- a/src/app/students/student-list/student-list.component.html
+++ b/src/app/students/student-list/student-list.component.html
@@ -1,5 +1,7 @@
 <mat-list style="margin: 2rem;">
     <h3 class="mat-display-1">Student List</h3>
+    <button mat-button [routerLink]="['create']">Create Student</button>
+
     <mat-list-item *ngFor="let student of students" style="border: 1px solid grey;cursor: pointer" [routerLink]="['detail',student.id]">
         <h4 matLine>{{student.first_name}} {{student.last_name}}</h4>
         <p matLine> {{student.gender}} </p>
