fixed delete functionality

--- a/src/app/students/student-detail/student-detail.component.html
+++ b/src/app/students/student-detail/student-detail.component.html
@@ -1,4 +1,4 @@
-<mat-list style="margin: 2rem;">
+<mat-list style="margin: 2rem;" *ngIf="student">
     <h3 class="mat-display-1">Student Detail</h3>
     <mat-list-item>
         <h4 matLine>First Name: {{student.first_name}}</h4>
@@ -8,6 +8,6 @@
     </mat-list-item>
     <mat-list-item>
         <button mat-button routerLink="edit">Edit</button>
-        <button mat-button>Delete</button>
+        <button mat-button (click)="delete(student)">Delete</button>
     </mat-list-item>
 </mat-list>
