--- a/src/app/courses/course-detail/course-detail.component.html
+++ b/src/app/courses/course-detail/course-detail.component.html
@@ -8,6 +8,6 @@
     </mat-list-item>
     <mat-list-item>
         <button mat-button routerLink="edit">Edit</button>
-        <button mat-button>Delete</button>
+        <button mat-button (click)="delete(course)">Delete</button>
     </mat-list-item>
 </mat-list>
