--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -7,6 +7,6 @@
         <p matLine> {{course.university}} </p>
         <span class="spacer"></span>
         <button mat-button [routerLink]="['/courses/detail', course.id, 'edit']">Edit</button>
-        <button mat-button routerLink="/register">Delete</button>
+        <button mat-button (click)="delete(course)">Delete</button>
     </mat-list-item>
 </mat-list>
