--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   <span class="spacer"></span>
   <button mat-button routerLink="/login"  *ngIf="!authService.isLoggedIn">Login</button>
   <button mat-button (click)="authService.logout()" *ngIf="authService.isLoggedIn">Logout</button>
-  <button mat-button routerLink="/register">Register</button>
+  <button mat-button *ngIf="!authService.isLoggedIn" routerLink="/register">Register</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
