--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
   <button mat-button routerLink="/home">Dashboard</button>
   <button mat-button routerLink="/students">Students</button>
   <button mat-button routerLink="/courses">Courses</button>
+  <button mat-button routerLink="/about">About/Contact</button>
   <span class="spacer"></span>
   <button mat-button routerLink="/login"  *ngIf="!authService.isLoggedIn">Login</button>
   <button mat-button (click)="authService.logout()" *ngIf="authService.isLoggedIn">Logout</button>
