changed details to slogan

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,9 @@
-<h1>Our Company</h1>
-<p>Company Details
-</p>
+<div style="margin: 1rem">
+    <h1>Our Company</h1>
+    <p>Company Slogan
+    </p>
+
+</div>
 
 <br />
 <br />
